force-app/main/default/objects/Lead/fields/Reason_if_lead_bank__c.field-meta.xml
<CustomField>
    <fullName>Reason_if_lead_bank__c</fullName>
    <description>No longer used</description>
    <label>Reason if lead bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>