force-app/main/default/objects/Lead/fields/Referral_notes__c.field-meta.xml
<CustomField>
    <fullName>Referral_notes__c</fullName>
    <description>Free text notes to capture details of referee</description>
    <label>Referee notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>