force-app/main/default/objects/Lead/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <description>No longer used. Capture where referral has come from</description>
    <label>Referral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Referral_Type</valueSetName>
    </valueSet>
</CustomField>