force-app/main/default/objects/Lead/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The client, colleague, introducer, or business that made the referral.</description>
    <inlineHelpText>The client, colleague, introducer, or business that made the referral.</inlineHelpText>
    <label>Referrer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must be a colleague, person, or business.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PersonAccount, OW_business, Colleague</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>ReferredLeads</relationshipName>
    <type>Lookup</type>
</CustomField>