force-app/main/default/objects/Lead/fields/Residency__c.field-meta.xml
<CustomField>
    <fullName>Residency__c</fullName>
    <description>The lead residency, UK resident or not at the time of creation.</description>
    <label>Residency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UK resident</fullName>
            </value>
            <value>
                <fullName>Not UK resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>