force-app/main/default/objects/Lead/fields/Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email__c</fullName>
    <description>Capture secondary email on lead</description>
    <label>Secondary email</label>
    <type>Email</type>
</CustomField>