force-app/main/default/objects/Lead/fields/Send_Discovery_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Send_Discovery_Questionnaire__c</fullName>
    <description>Indicate if we should generate a discovery questionnaire to send to client</description>
    <label>Generate discovery questionnaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>