force-app/main/default/objects/Lead/fields/Source_Event__c.field-meta.xml
<CustomField>
    <fullName>Source_Event__c</fullName>
    <description>Identifies the specific event that a lead originated</description>
    <externalId>true</externalId>
    <inlineHelpText>Only complete if Lead Source &gt; Event</inlineHelpText>
    <label>Source event</label>
    <length>150</length>
    <type>Text</type>
</CustomField>