force-app/main/default/objects/Lead/fields/SubCriteriaNotes__c.field-meta.xml
<CustomField>
    <fullName>SubCriteriaNotes__c</fullName>
    <description>Free text notes to capture sub criteria notes</description>
    <label>Sub-criteria notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>