force-app/main/default/objects/Lead/fields/TEMP_phoneBefore__c.field-meta.xml
<CustomField>
    <fullName>TEMP_phoneBefore__c</fullName>
    <description>Temporary field to record the data in the phone field before LeadUpdateMobile class is run.</description>
    <label>Phone before</label>
    <length>255</length>
    <type>Text</type>
</CustomField>