force-app/main/default/objects/Lead/fields/Time_for_first_contact__c.field-meta.xml
<CustomField>
    <fullName>Time_for_first_contact__c</fullName>
    <description>Difference between lead created date and date of first contact</description>
    <formula>IF(AND((5 - (CASE(MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD(  
Date_of_First_Contact__c   - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ), 
((( 
Date_of_First_Contact__c   -   DATEVALUE(CreatedDate) ) + 1) &lt; 7)), 
((CASE(MOD(  
Date_of_First_Contact__c   - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD(  DATEVALUE(CreatedDate)  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))),
(((FLOOR((( 
Date_of_First_Contact__c   -  DATEVALUE(CreatedDate) ) - (CASE(MOD(  DATEVALUE(CreatedDate)  - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) +
(CASE(MOD(  DATEVALUE(CreatedDate)  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) + 
(CASE(MOD(  
Date_of_First_Contact__c   - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time for first contact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>