force-app/main/default/objects/Lead/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <description>Name of form the client filled out on creation of lead</description>
    <label>UTM campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>