force-app/main/default/objects/Lead/fields/Wealth_Marketing_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Marketing_Opt_In__c</fullName>
    <description>If client opted in to receive marketing from us</description>
    <label>Wealth marketing opt in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>false</fullName>
                <isActive>false</isActive>
                <label>false</label>
            </value>
            <value>
                <fullName>true</fullName>
                <isActive>false</isActive>
                <label>true</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>