force-app/main/default/objects/Lead/fields/What_are_they_looking_for__c.field-meta.xml
<CustomField>
    <fullName>What_are_they_looking_for__c</fullName>
    <description>What a potential client is looking for from our service</description>
    <label>What are they looking for?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>