force-app/main/default/objects/Lead/recordTypes/OW_mortgage.recordType-meta.xml
<RecordType>
    <fullName>OW_mortgage</fullName>
    <active>true</active>
    <businessProcess>Mortgage process</businessProcess>
    <description>Used where the person is interested in getting a mortgage through Octopus Wealth</description>
    <label>Mortgage</label>
</RecordType>