force-app/main/default/objects/Lead/validationRules/EstLiquidAssetsRequiredConverted.validationRule-meta.xml
<ValidationRule>
    <fullName>EstLiquidAssetsRequiredConverted</fullName>
    <active>true</active>
    <description>Est Liquid Assests field must be populated on General Leads (record type) when converted</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
RecordType.DeveloperName = &quot;General&quot; 
&amp;&amp;
IsConverted 
&amp;&amp;
ISBLANK(Est_Liquid_Assets__c) 
&amp;&amp;
NOT(ISPICKVAL(LeadSource, &quot;Purchased List&quot;)) 
&amp;&amp;
(ISBLANK(ConvertedDate) || ConvertedDate &gt; DATE(2022,01,01))</errorConditionFormula>
    <errorDisplayField>Est_Liquid_Assets__c</errorDisplayField>
    <errorMessage>Est Liquid Assets must be populated before converting a lead</errorMessage>
</ValidationRule>