force-app/main/default/objects/Lead/validationRules/LeadSourceRequiredConverted.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadSourceRequiredConverted</fullName>
    <active>true</active>
    <description>Ensures that a lead source is recorded for all leads that move beyond the unactioned status.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
ISPICKVAL(LeadSource,&quot;&quot;)
&amp;&amp;
IsConverted</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Please record a lead source</errorMessage>
</ValidationRule>