force-app/main/default/objects/Lead/validationRules/MobileOrPhoneRequiredConverted.validationRule-meta.xml
<ValidationRule>
    <fullName>MobileOrPhoneRequiredConverted</fullName>
    <active>true</active>
    <description>Ensures mobile or phone provided on converting a lead.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
FirstName &lt;&gt; &quot;Forgotten&quot; 
&amp;&amp; 
LastName &lt;&gt; &quot;Customer&quot; 
&amp;&amp;
IsConverted 
&amp;&amp;
NOT( ISPICKVAL( LeadSource, &quot;Purchased List&quot; )) 
&amp;&amp;
NOT( RecordType.DeveloperName = &quot;OW_mortgage&quot; ) 
&amp;&amp;
ISBLANK(MobilePhone) 
&amp;&amp;
ISBLANK(Phone)</errorConditionFormula>
    <errorMessage>Mobile and/or phone must be completed.</errorMessage>
</ValidationRule>