force-app/main/default/objects/Lead/validationRules/MobileUkFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>MobileUkFormat</fullName>
    <active>true</active>
    <description>If mobile begins with +44, it must be in UK mobile number format.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
NOT($Permission.IntegrationUser) 
&amp;&amp;
BEGINS(MobilePhone, &quot;+44&quot;) 
&amp;&amp;
NOT(REGEX(MobilePhone, &quot;^\\+447\\d{9}$&quot;)) 
&amp;&amp;
NOT(ISCHANGED(OwnerId))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>UK mobile phone numbers must be in the following format &quot;+447#########&quot; (with no spaces, letters, or special characters).</errorMessage>
</ValidationRule>