force-app/main/default/objects/Lead/validationRules/NoFurtherActionRequiredMortgage.validationRule-meta.xml
<ValidationRule>
    <fullName>NoFurtherActionRequiredMortgage</fullName>
    <active>true</active>
    <description>For mortgage leads, ensures that a closed reason is recorded where the status is no further action</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;OW_mortgage&quot; &amp;&amp; 
ISPICKVAL(Status , &quot;No Further Action&quot; ) &amp;&amp; 
ISBLANK(TEXT(OW_closed_reason__c ))</errorConditionFormula>
    <errorDisplayField>OW_closed_reason__c</errorDisplayField>
    <errorMessage>A closed reason is required when moving to the no further action status.</errorMessage>
</ValidationRule>