force-app/main/default/objects/Lead/validationRules/Not_Qualified_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Qualified_Notes</fullName>
    <active>true</active>
    <description>Requires not qualified notes to be made if not qualified is selected in lost reasons</description>
    <errorConditionFormula>OR(
AND(
ISPICKVAL(Qualification__c, &quot;Qualified&quot;), 
ISPICKVAL(Qualified_Level__c,&quot;&quot;)
)

,

AND(
 INCLUDES(Lost_Reasons__c, &quot;Not Qualified&quot;),
ISPICKVAL(  Not_Qualified_Level__c , &quot;&quot; )
)
)</errorConditionFormula>
    <errorMessage>You need to complete the &apos;Not Qualified&apos; section</errorMessage>
</ValidationRule>