force-app/main/default/objects/Lead/validationRules/PhoneE164Format.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneE164Format</fullName>
    <active>true</active>
    <description>Phone field must be in valid phone number format.</description>
    <errorConditionFormula>NOT(ISBLANK(Phone )) &amp;&amp;
NOT($Permission.IntegrationUser) &amp;&amp;
NOT(REGEX(Phone, &quot;^\\+[1-9]\\d{6,13}$&quot;)) &amp;&amp;
NOT(ISCHANGED(OwnerId))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone numbers must must be in valid phone number format (with no spaces, letters, or special characters, beginning with a country code).</errorMessage>
</ValidationRule>