force-app/main/default/objects/Lead/validationRules/PhoneEnsureNotUKMobile.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneEnsureNotUKMobile</fullName>
    <active>true</active>
    <description>If phone begins with +44, it cannot begin with +447 because that is a mobile number.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
NOT($Permission.IntegrationUser) 
&amp;&amp;
ISBLANK(MobilePhone) 
&amp;&amp;
BEGINS( Phone , &quot;+44&quot;) 
&amp;&amp;
BEGINS( Phone , &quot;+447&quot;) 
&amp;&amp;
NOT(ISCHANGED(OwnerId))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Mobile numbers can&#39;t be stored in the phone field</errorMessage>
</ValidationRule>