force-app/main/default/objects/Lead/validationRules/Sales_Qualified.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Qualified</fullName>
    <active>true</active>
    <description>Validations if the stage is moved to Nurturing Sales Qualified</description>
    <errorConditionFormula>OR(
AND(
ISPICKVAL(Qualification__c, &quot;Qualified&quot;), 
ISPICKVAL(Qualified_Level__c,&quot;&quot;)
)
,
(
AND(
 ISPICKVAL(Status, &quot;Nurturing | Sales Qualified&quot;),
ISPICKVAL(Qualified_Level__c,&quot;&quot;)
)
)
)</errorConditionFormula>
    <errorDisplayField>Qualified_Level__c</errorDisplayField>
    <errorMessage>You need to complete the &apos;Qualified&apos; section</errorMessage>
</ValidationRule>