force-app/main/default/objects/Lead/validationRules/StatusNoFurtherActionRequiredFields.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusNoFurtherActionRequiredFields</fullName>
    <active>true</active>
    <description>For advice leads, ensures that key fields are captured for MI purposes.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
(RecordType.DeveloperName = &quot;General&quot; 
||
RecordType.DeveloperName = &quot;Referral&quot; ) 
&amp;&amp; 
ISPICKVAL(Status , &quot;No Further Action&quot;) 
&amp;&amp;
NOT(INCLUDES(Lost_Reasons__c, &quot;Did not contact - old lead&quot;)) 
&amp;&amp;
(ISBLANK(Lost_Reasons__c) || ISBLANK(Lost_Notes__c))</errorConditionFormula>
    <errorMessage>Please specify a lost reason and notes.</errorMessage>
</ValidationRule>