force-app/main/default/objects/Lead/validationRules/StatusQualified.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusQualified</fullName>
    <active>true</active>
    <description>Validations if the stage is moved to Nurturing Sales Qualified</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
(ISPICKVAL(Qualification__c, &quot;Qualified&quot;)
&amp;&amp;
ISPICKVAL(Qualified_Level__c,&quot;&quot;)
||
ISPICKVAL(Status, &quot;Nurturing | Sales Qualified&quot;)
&amp;&amp;
ISPICKVAL(Qualified_Level__c,&quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Qualified_Level__c</errorDisplayField>
    <errorMessage>You need to complete the &#39;Qualified&#39; section</errorMessage>
</ValidationRule>