force-app/main/default/objects/Lead/validationRules/SubCriteriaNotesRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>SubCriteriaNotesRequired</fullName>
    <active>true</active>
    <description>Sub-criteria notes must be populated where estimated liquid assets are below £200k.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
RecordType.DeveloperName = &quot;General&quot; 
&amp;&amp;
Est_Liquid_Assets__c &lt; 200000 
&amp;&amp;
ISBLANK(SubCriteriaNotes__c) 
&amp;&amp;
ConvertedDate &gt;= DATE(2023,02,23)</errorConditionFormula>
    <errorDisplayField>SubCriteriaNotes__c</errorDisplayField>
    <errorMessage>You must enter sub-criteria notes as estimated liquid assets is below £200k.</errorMessage>
</ValidationRule>