force-app/main/default/objects/Lead/listViews/Digileads_Lead.listView-meta.xml
<ListView>
    <fullName>Digileads_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.FinServ__General</value>
    </filters>
    <label>Digileads</label>
    <queue>Digileads</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>