force-app/main/default/objects/Lead/listViews/LeadNoFurtherAction_Lead.listView-meta.xml
<ListView>
    <fullName>LeadNoFurtherAction_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>No further action leads</label>
    <queue>LeadNoFurtherAction</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>