force-app/main/default/objects/Lead/listViews/MortgageLeadsOverpaymentCalculator.listView-meta.xml
<ListView>
    <fullName>MortgageLeadsOverpaymentCalculator</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OW_mortgage_rate_expiration__c</columns>
    <columns>mortgageRateExpired__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.OW_mortgage</value>
    </filters>
    <filters>
        <field>OW_parent_lead__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>No Further Action</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>YOUTUBE</value>
    </filters>
    <label>Mortgage leads (overpayment calculator)</label>
    <sharedTo>
        <role>Head_of_Partners</role>
        <role>OW_mortgage_specialist</role>
        <role>OW_mortgage_support_specialist</role>
    </sharedTo>
</ListView>