force-app/main/default/objects/Lead/listViews/MyUnactionedLeads.listView-meta.xml
<ListView>
    <fullName>MyUnactionedLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Unactioned</value>
    </filters>
    <label>My Unactioned Leads</label>
    <sharedTo>
        <roleAndSubordinates>Head_of_Partners</roleAndSubordinates>
    </sharedTo>
</ListView>